<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerSearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="64dp"
            app:boxCornerRadiusBottomStart="64dp"
            app:boxCornerRadiusTopEnd="64dp"
            app:boxCornerRadiusTopStart="64dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/where" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/hsvTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/serviceHotel"
                    style="@style/ServiceChip.Selected"
                    android:text="@string/hotel"
                    app:drawableStartCompat="@drawable/ic_hotel" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/servicePlane"
                    style="@style/ServiceChip.Default"
                    android:text="@string/plane"
                    app:drawableStartCompat="@drawable/ic_plane" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/serviceCar"
                    style="@style/ServiceChip.Default"
                    android:text="@string/car"
                    app:drawableStartCompat="@drawable/ic_car" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/serviceBoat"
                    style="@style/ServiceChip.Default"
                    android:text="@string/boat"
                    app:drawableStartCompat="@drawable/ic_boat" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/sectionMostPopularNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/most_popular_now"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/more_offers"
                    app:drawableEndCompat="@drawable/ic_arrow_right" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMostPopularNow"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:contentDescription="@string/most_popular_hotel_photo_on_home_screen"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cover_hotel_most_popular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvHotelName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="Most popular hotel name" />

                            <TextView
                                android:id="@+id/tvRating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                app:drawableStartCompat="@drawable/ic_rate"
                                tools:text="4,88 (370 reviews)" />
                        </LinearLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="3dp" />

                        <TextView
                            android:id="@+id/tvMostPopularHotelLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.6"
                            tools:text="City, Country" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="3dp" />

                        <TextView
                            android:id="@+id/tvHotelInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.6"
                            tools:text="x nights - Start - End" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="8dp" />

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="$000 per night" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_type_chip_selected"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2,000+"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unique_places"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:drawableTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cover_hotel_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:text="@string/dream_places_to_visit"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cover_hotel_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hyphenationFrequency="normal"
                        android:padding="16dp"
                        android:text="@string/recommended_hotels"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
